workshop03/deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment

metadata:
  name: stackup-weather-deployment
  namespace: weather

spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: stackup-weather-app
    spec:
      containers:
        - name: stackup-weather-app
          image: stackupiss/weather:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
