workshop03/deploy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: weather-ingress
  namespace: weather

spec:
  selector:
    istio: ingressgateway # controller
  servers:
  - hosts: 
    - "weather.178.128.140.88.nip.io"
    port:
      number: 80
      protocol: HTTP
      name: HTTP
