workshop03/deploy/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name:  weather-dr-1
  namespace: weather

spec:
  host: weather-svc
